fix: adjust cards alignment at home

--- a/src/styles/pages/home/home.sass
+++ b/src/styles/pages/home/home.sass
@@ -58,7 +58,7 @@
         padding: 59px
 
         .cars-page
-            width: 80%
+            width: 100%
 
             .w80
                 display: none
